--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
 
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string name="about">About</string>
+    <string name="result">Results</string>
+    <string name="share">Share</string>
 
 </resources>
